syntax = "proto3";
package virtengine.market.v2beta1;

import "gogoproto/gogo.proto";

import "cosmos/base/v1beta1/coin.proto";

import "virtengine/base/deposit/v1/deposit.proto";

import "virtengine/market/v2beta1/resourcesoffer.proto";
import "virtengine/market/v2beta1/bid.proto";
import "virtengine/market/v2beta1/types.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/market/v2beta1";

// MsgCreateBid defines an SDK message for creating Bid.
message MsgCreateBid {
  option (gogoproto.equal)      = false;

  BidID id = 1 [
    (gogoproto.customname) = "ID",
    (gogoproto.nullable)   = false,
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];

  // Prices holds the pricing options stated on the Bid.
  repeated cosmos.base.v1beta1.DecCoin prices = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "prices",
    (gogoproto.moretags) = "yaml:\"prices\""
  ];

  // Deposit holds the amount of coins to deposit.
  virtengine.base.deposit.v1.Deposit deposit = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "deposit",
    (gogoproto.moretags) = "yaml:\"deposit\""
  ];

  // ResourceOffer is a list of resource offers.
  repeated ResourceOffer resources_offer = 4 [
    (gogoproto.nullable)     = false,
    (gogoproto.castrepeated) = "ResourcesOffer",
    (gogoproto.customname)   = "ResourcesOffer",
    (gogoproto.jsontag)      = "resources_offer",
    (gogoproto.moretags)     = "yaml:\"resources_offer\""
  ];
}

// MsgCreateBidResponse defines the Msg/CreateBid response type.
message MsgCreateBidResponse {}

// MsgCloseBid defines an SDK message for closing bid.
message MsgCloseBid {
  option (gogoproto.equal) = false;

  // Id is the unique identifier of the Bid.
  BidID id = 1 [
    (gogoproto.customname) = "ID",
    (gogoproto.nullable)   = false,
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];

  LeaseClosedReason reason = 2 [
    (gogoproto.jsontag)  = "reason",
    (gogoproto.moretags) = "yaml:\"reason\""
  ];
}

// MsgCloseBidResponse defines the Msg/CloseBid response type.
message MsgCloseBidResponse {}
